--- a/app/src/main/res/layout/activity_category_and_product.xml
+++ b/app/src/main/res/layout/activity_category_and_product.xml
@@ -16,69 +16,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <!-- Название -->
-            <TextView
-                android:id="@+id/txt_title"
-                style="@style/txtTitleStyle"
+            android:layout_height="match_parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerCategoryAndProduct"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:text="Загрузка..." />
-        <LinearLayout
-            android:id="@+id/layout_loading"
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:background="@color/colorWhite"
-            android:layout_height="160dp">
-            <ImageView
-                android:id="@+id/img_Loading"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="30dp"
-                app:srcCompat="@drawable/ico" />
-        </LinearLayout>
-
-
-            <RelativeLayout
-                android:id="@+id/layout_sorting_and_filtering"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:background="@color/colorWhite"
-                android:visibility="gone">
-
-                <TextView
-                    android:id="@+id/txt_filtering"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:drawableRight="@drawable/ic_down"
-                    android:gravity="center"
-                    android:text="Фильтр" />
-
-                <TextView
-                    android:id="@+id/txt_sorting"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="5dp"
-                    android:drawableRight="@drawable/ic_down_green"
-                    android:gravity="center"
-                    android:text="Сортировка"
-                    android:textColor="@color/colorGreen" />
-            </RelativeLayout>
-            <!-- Товары и продукты -->
-            <com.example.ankas.Components.ExpandableHeightGridView
-                android:id="@+id/grid_categoryAndProduct"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:horizontalSpacing="2dp"
-                android:numColumns="3"
-                android:verticalSpacing="2dp" />
-            <!-- Нижнее меню -->
-            <include layout="@layout/bottom_info" />
+                android:layout_height="match_parent"/>
         </LinearLayout>
     </ScrollView>
 
