--- a/app/src/main/res/layout/dialog_by.xml
+++ b/app/src/main/res/layout/dialog_by.xml
@@ -2,48 +2,60 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     android:orientation="vertical">
-
+    <!-- Показ товара -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:background="@color/colorWhite"
-        android:orientation="vertical">
-        <!-- Показ товара -->
+        android:layout_margin="5dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/img_product"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:padding="5dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/image_dialog"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:padding="5dp" />
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txt_name_dialog"
+                android:id="@+id/txt_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLines="4"
+                android:layout_marginBottom="5dp"
                 android:textSize="18sp" />
-        </LinearLayout>
-        <!-- Продоолжить покупки или оформить заказ -->
-        <Button
-            android:id="@+id/btn_resume_dialog"
-            android:layout_width="match_parent"
-            android:layout_height="38dp"
-            android:layout_marginBottom="5dp"
-            android:background="@color/colorGreen"
-            android:text="Продолжить покупки"
-            android:textColor="@color/colorWhite" />
 
-        <Button
-            android:id="@+id/btn_arrange_dialog"
-            android:layout_width="match_parent"
-            android:layout_height="38dp"
-            android:background="@drawable/border_green"
-            android:text="Оформить заказ" />
+            <TextView
+                android:id="@+id/txt_price"
+                android:gravity="right"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
+    <!-- Продоолжить покупки или оформить заказ -->
+    <Button
+        android:id="@+id/btn_resume"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@color/colorGreen"
+        android:text="Оформить заказ"
+        android:textColor="@color/colorWhite" />
+
+    <Button
+        android:id="@+id/btn_arrange"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/border_green"
+        android:text="Продолжить покупки" />
 </LinearLayout>
