--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -2,22 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/colorWhite"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/txt_name"
-        style="@style/txtNameProductAndCategoryStyle"
-        android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:maxLines="2" />
+    android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/image_category"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/img_category"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:adjustViewBounds="true"
-        android:padding="10dp"
-        android:scaleType="fitCenter" />
+        android:padding="0dp"
+        android:scaleType="fitCenter"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/txt_name"
+            style="@style/txtNameProductAndCategoryStyle"
+            android:layout_width="match_parent"
+            android:layout_height="59dp"
+            android:gravity="center_vertical"
+            android:maxLines="3"
+            android:drawableRight="@drawable/ic_right"
+            android:text="Название\nНазвание\nНазвание"
+            android:textSize="14sp" />
+        <View
+            android:layout_width="match_parent"
+            android:background="@color/colorGray"
+            android:layout_height="1dp"/>
+    </LinearLayout>
 </LinearLayout>
