--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlue">#0053FF</color>
     <color name="colorRed">#FF0000</color>
+    <color name="colorDarkPurple">#65028E</color>
 </resources>
