--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -5,87 +5,8 @@
     android:layout_height="match_parent"
     android:background="@color/colorGray"
     android:orientation="vertical">
-    <!-- Обратный звонок -->
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerMain"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:background="@color/colorWhite"
-        android:orientation="horizontal"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp">
-
-        <TextView
-            android:id="@+id/txt_tell"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="+7(351) 751-40-35"
-            android:textColor="@color/colorGreen"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/txt_callBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="Обратный звонок"
-            android:textColor="@color/colorGreen"
-            android:textSize="18sp" />
-    </LinearLayout>
-    <!-- Баннер -->
-    <com.example.ankas.Components.MySliderImage
-        android:id="@+id/slider_banner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp" />
-    <!-- Отображение категорий -->
-    <!-- Название -->
-    <TextView
-        style="@style/txtTitleStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:text="Категории товаров" />
-    <!-- Категории товаров -->
-    <com.example.ankas.Components.ExpandableHeightGridView
-        android:id="@+id/grid_category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:horizontalSpacing="2dp"
-        android:numColumns="3"
-        android:verticalSpacing="2dp" />
-    <!-- Популярные товары -->
-    <TextView
-        style="@style/txtTitleStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
-        android:text="Популярный товары" />
-
-    <LinearLayout
-        android:id="@+id/layout_popularCategory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" />
-    <!-- популярные товары -->
-    <com.example.ankas.Components.ExpandableHeightGridView
-        android:id="@+id/grid_popularProduct"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:numColumns="2" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:text="В официальном приложении компании АНКАС, вы можете приобрести любое оборудование, представленное в каталоге компании. Для каждого товара у нас выгодные цены с максимально точным и подробным описанием, а также полными характеристиками и собственными фотографиями."
-        android:textSize="12sp" />
-
-    <!-- Нижнее меню -->
-    <include layout="@layout/bottom_info" />
+        android:layout_height="match_parent"/>
 </LinearLayout>
