--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/img_product"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         app:srcCompat="@mipmap/ic_launcher" />
     <!-- Название -->
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:gravity="right"
-        android:text="999 999 999 Р/шт."
+        android:text="999 999 Р/шт."
         android:textSize="14sp" />
     <!-- Бренд товара -->
     <TextView
@@ -36,6 +36,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:text="Название, Название"
+        android:text="Название"
         android:textSize="12sp" />
 </LinearLayout>
