--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -12,13 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:adjustViewBounds="true"
+        app:srcCompat="@drawable/ico_small" />
     <!-- Название -->
     <TextView
         android:id="@+id/txt_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
+        android:maxLines="2"
+        android:lines="2"
         android:text="Название\nНазвание"
         android:textSize="14sp" />
     <!-- Стоимость -->
