--- a/app/src/main/res/layout/item_product_main.xml
+++ b/app/src/main/res/layout/item_product_main.xml
@@ -23,9 +23,10 @@
         <ImageView
             android:id="@+id/img_product"
             android:layout_width="match_parent"
-            android:layout_weight="1"
             android:layout_height="120dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/ico_small" />
 
         <LinearLayout
             android:layout_width="match_parent"
