--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -10,238 +10,8 @@
 
     <include layout="@layout/toolbar" />
     <!-- Пролистываемый контент -->
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerProduct"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <!-- Название -->
-            <TextView
-                android:id="@+id/txt_name"
-                style="@style/txtTitleStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp" />
-            <!-- Изображения -->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:background="@color/colorWhite"
-                android:layout_height="300dp">
-
-                <com.example.ankas.Components.MySliderImage
-                    android:id="@+id/slider_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="0dp"
-                    android:background="@color/colorGreen"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:text="В наличии на складе"
-                    android:textColor="@color/colorWhite" />
-            </RelativeLayout>
-            <!-- Код товара и брэнд -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:background="@color/colorWhite"
-                android:padding="2dp">
-
-                <TextView
-                    android:id="@+id/txt_idProduct"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/border_black"
-                    android:text="Код товара: 0"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/txt_brand"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:background="@drawable/border_black"
-                    android:maxLines="1"
-                    android:text="Название, Страна"
-                    android:textSize="12sp" />
-            </LinearLayout>
-            <!-- Купить, наличие, доставка -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:background="@color/colorWhite"
-                android:orientation="vertical"
-                android:padding="5dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:padding="2dp"
-                        app:srcCompat="@drawable/ic_notepad" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="24dp"
-                        android:layout_marginLeft="4dp"
-                        android:gravity="center"
-                        android:text="В наличии " />
-
-                    <TextView
-                        android:id="@+id/txt_quantity"
-                        android:layout_width="wrap_content"
-                        android:layout_height="24dp"
-                        android:gravity="center"
-                        android:text="10 шт."
-                        android:textColor="@color/colorBlue" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:padding="2dp"
-                        app:srcCompat="@drawable/ic_truck" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="24dp"
-                        android:layout_marginLeft="4dp"
-                        android:gravity="center"
-                        android:text="Быстрая доставка по г. Челябинск" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:padding="2dp"
-                        app:srcCompat="@drawable/ic_map" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="24dp"
-                        android:layout_marginLeft="4dp"
-                        android:gravity="center"
-                        android:text="Самовывоз в " />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="24dp"
-                        android:gravity="center"
-                        android:text="г. Челябинск, ул. Газизулина, 2Б"
-                        android:textColor="@color/colorBlue" />
-                </LinearLayout>
-                <!-- Купить -->
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/txt_price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="36dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_toStartOf="@+id/btn_by"
-                        android:gravity="bottom"
-                        android:text="0 Р"
-                        android:textSize="24sp" />
-
-                    <Button
-                        android:id="@+id/btn_by"
-                        android:layout_width="150dp"
-                        android:layout_height="36dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="0dp"
-                        android:background="@color/colorGreen"
-                        android:text="Купить"
-                        android:textColor="@color/colorWhite" />
-                </RelativeLayout>
-            </LinearLayout>
-            <!-- Описание -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:background="@color/colorWhite"
-                android:orientation="vertical">
-                <!-- Название -->
-                <TextView
-                    style="@style/txtTitleStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Описание товара" />
-
-                <TextView
-                    android:id="@+id/txt_description"
-                    android:layout_width="match_parent"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-            <!-- Характеристики -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorWhite"
-                android:orientation="vertical">
-                <!-- Название -->
-                <TextView
-                    style="@style/txtTitleStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Характеристики товаров" />
-                <!-- Характеристики -->
-                <com.example.ankas.Components.ExpandableHeightGridView
-                    android:id="@+id/grid_specifications"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-            <!-- Пояснение -->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorDarkGray"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:paddingTop="5dp"
-                android:background="@color/colorWhite"
-                android:text="* Технические характеристики и комплект поставки могут быть изменены производителем без предварительного уведомления."/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorBlue"
-                android:background="@color/colorWhite"
-                android:paddingLeft="5dp"
-                android:id="@+id/txt_messageError"
-                android:paddingRight="5dp"
-                android:text="Сообщить об ошибке в описании..."/>
-            <!-- Нижнее меню -->
-            <include layout="@layout/bottom_info" />
-        </LinearLayout>
-    </ScrollView>
+        android:layout_height="match_parent"/>
 </LinearLayout>
