--- a/app/src/main/res/layout/info_fragment.xml
+++ b/app/src/main/res/layout/info_fragment.xml
@@ -60,6 +60,7 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/btn_category"
             style="@style/btnInfo"
             android:layout_width="match_parent"
             android:layout_height="36dp"
@@ -67,6 +68,7 @@
 
         <!-- Контакты -->
         <Button
+            android:id="@+id/btn_contacts"
             style="@style/btnInfo"
             android:layout_width="match_parent"
             android:layout_height="36dp"
@@ -122,5 +124,4 @@
             android:layout_height="36dp"
             android:text="Способы оплаты" />
     </LinearLayout>
-    <include layout="@layout/bottom_info"/>
 </LinearLayout>
