--- a/app/src/main/res/layout/item_product_prica_and_by.xml
+++ b/app/src/main/res/layout/item_product_prica_and_by.xml
@@ -17,6 +17,8 @@
 
         <TextView
             android:id="@+id/txt_kod_product"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/border_black"
@@ -28,6 +30,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
             android:background="@drawable/border_black"
             android:maxLines="1"
             android:text="Название, Страна"
